<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sample Android Application 1.1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_your_name">Please enter your name:</string>
    <string name="press_me">Press me please</string>

    <!-- LocationTrackerActivity -->
    <string name="title_activity_location_tracker">LocationTrackerActivity</string>
    <string name="longitude_label">Longitude:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="empty_coord"></string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>

    <!-- SpeechRecorderActivity -->
    <string name="title_activity_speech_recorder">SpeechRecorderActivity</string>
    <string name="speech_recognizer">Speech Recognizer</string>
    <string name="speech_recognizer_start_button">Start to recognize</string>
    <string name="speech_recognizer_stop_button">Stop</string>
    <string name="speech_recognizer_results">No results</string>
    <string name="speech_recognizer_status">Inactive</string>

    <!-- ArrivalEstimationActivity -->
    <string name="title_activity_arrival_estimation">Estimate your arrival</string>
    <string name="curr_loc_label">Your current location:</string>
    <string name="dest_loc_label">Your destination:</string>
    <string name="estimate_button">Estimate arrival!</string>
    <string name="empty"></string>
    <string name="default_origin_addr">Bellevue, WA</string>
    <string name="reset_map_quota_button">Reset maps quota</string>
    
    <!--  AwsS3Activity -->
    <string name="title_activity_aws_s3">AwsS3Activity</string>
    <string name="save_button">Save</string>
    
    <!--  AwsSNSActivity -->
    <string name="title_activity_aws_kinesis">AwsKinesisActivity</string>
    <string name="zero">0</string>
    <string name="list_button">List</string>
</resources>
