<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="7"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/curr_loc_label" />
    
    <TextView
        android:id="@+id/curr_loc_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/empty" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/dest_loc_label" />

    <EditText
        android:id="@+id/dest_loc_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="@string/default_origin_addr" />

    <Button
        android:id="@+id/estimate_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:onClick="onClick"
        android:text="@string/estimate_button" />

    <TextView
        android:id="@+id/estimate_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/empty" />

    <Button
        android:id="@+id/reset_map_quota_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_rowSpan="2"
        android:onClick="onClick"
        android:text="@string/reset_map_quota_button" />
</GridLayout>
