<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="6"
    android:columnCount="2"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/kinesis_texbox_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/zero" />

    <Button
        android:id="@+id/save_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:onClick="onClick"
        android:text="@string/save_button" />
    
    <Button
        android:id="@+id/list_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:onClick="onClick"
        android:text="@string/list_button" />

    <TextView
        android:id="@+id/kinesis_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="3"
        android:layout_column="1"
        android:text="@string/empty" />

</GridLayout>
