<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_rowSpan="1"
        android:text="@string/speech_recognizer"
        />

    <TextView
        android:id="@+id/speech_recognizer_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:text="@string/speech_recognizer_results" />
    
    <TextView
        android:id="@+id/speech_recognizer_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="2"
        android:layout_rowSpan="1" />
    
    <Button
        android:id="@+id/speech_recognizer_start_button"
        android:layout_row="3"
        android:layout_column="0"
        android:onClick="onClick"
        android:text="@string/speech_recognizer_start_button"
		/>
    
    <Button
        android:id="@+id/speech_recognizer_stop_button"
        android:layout_row="3"
        android:layout_column="1"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/speech_recognizer_stop_button"
		/>
</GridLayout>
